Temporary fix for Men & Women dropdown overlap

--- a/browser/scss/directives/nav-dropdown.scss
+++ b/browser/scss/directives/nav-dropdown.scss
@@ -2,7 +2,7 @@
   background: rgba(255,255,255,0.95);
   width: 440px;
   height: 200px;
-  z-index: 1;
+  z-index: 5;
   box-shadow: 1px 1px 1px rgba(0,0,0,0.2);
   padding: 10px;
   border-bottom: solid 1px #849bae;
